Bug 424570 ###!!! ASSERTION: shouldn't have any listeners: 'm_ChangeListeners.Length() == 0' after adding and removing a mailing list. r/sr=Neil